gtk/sass/3.22/_3rd-party.scss
/* ... */
// panel styling
UnityPanelWidget,
.unity-panel {
  &, &:backdrop {
    border-bottom: 1px solid $panel_bg_color;
    color: $inverted_fg_color;
    background-image: linear-gradient(to bottom, $panel_bg_color,
                                                 $panel_bg_color);
    box-shadow: none;
  }
}

.unity-panel.menuitem,
.unity-panel .menuitem { padding: 1px 1px 0; }

.unity-panel.menubar,
.unity-panel .menubar {
  background-color: transparent;
  background-image: none;
  box-shadow: none;

  &.menuitem,
  & .menuitem * {
    padding: 0 6px;
    border-radius: 0;
    border-bottom: none;
    color: $inverted_fg_color;
    background-color: transparent;
    &:hover {
      color: $selected_fg_color;
      box-shadow: inset 0 2px $selected_bg_color;
    }
  }
}


/***********************
 * Lightdm-Gtk-Greeter *
 ***********************/

.lightdm-gtk-greeter {
  // top-panel styling
  #panel_window {
    color: $inverted_fg_color;
    box-shadow: none;
    font-weight: 700;
    text-shadow: none;
    box-shadow: inset 0 2px $panel_bg_color;

    &, &.background,
    & > * > * { background-color: transparent; } // FIXME: ugly wildcard

    & label {
      padding: 0 3px;
      color: $inverted_fg_color;
    }

    menubar {
      @extend .gnome-panel-menu-bar;
      background-color: transparent;
      color: $inverted_fg_color;

      & label,
      & image {
        padding: 0 3px;
        color: $inverted_fg_color;
      }

      &:hover {
        color: $selected_fg_color;
        box-shadow: inset 0 2px $selected_bg_color;

        label,
        image { color: $selected_fg_color; }
      }

      // flip underline-indicator vertically
      > menuitem {
        background-color: transparent;
        &:hover { box-shadow: inset 0 2px $selected_bg_color; }
      }

      menu {
        menuitem {
          padding: rem(5.3px) rem(8px) rem(6.7px);
          font-weight: 400;
          text-shadow: none;

          // override above hacks
          &, & label { color: $secondary_fg_color; }
          &:hover,
          &:hover label { color: $fg_color; }
          &:disabled,
          &:disabled label { color: $insensitive_fg_color; }
        }
      }
    }
  }

  // main container
  #login_window,
  #shutdown_dialog,
  #restart_dialog {
    @extend messagedialog;
    border: none;
    border-radius: 0;
    color: $inverted_fg_color;
    box-shadow: none;

    &, &.background { background-color: transparent; }

    button {
      padding: rem(9.3px, $sw: 1.0) rem(13.3px, $sw: 1.0) rem(10.7px, $sw: 1.0);
      color: $inverted_secondary_fg_color;
      &:hover,
      &:active { color: $inverted_fg_color; }
      &:disabled { color: $insensitive_inverted_fg_color; }

      &#login_button { @extend button.suggested-action; }

      &#restart_button,
      &#shutdown_button { @extend button.destructive-action; }

      &.combo {
        border-image: -gtk-gradient(radial,
                                    center bottom, 0,
                                    center bottom, 0.5,
                                    to($track_color),
                                    to(transparent))
                                    0 0 1 / 0 0 1px;
        color: $inverted_fg_color;
        font-weight: 700;
        font-size: 110%;
        &:hover,
        &:active {
          border-image: -gtk-gradient(radial,
                                      center bottom, 0,
                                      center bottom, 0.5,
                                      to($selected_bg_color),
                                      to(transparent))
                                      0 0 2 / 0 0 2px;
          color: $selected_fg_color;
        }
        &:disabled,
        &:checked:disabled {
          border-image: -gtk-gradient(radial,
                                      center bottom, 0,
                                      center bottom, 0.5,
                                      to($track_color),
                                      to(transparent))
                                      0 0 1 / 0 0 1px;
          color: $insensitive_inverted_fg_color;
        }
      }
    }

    infobar.error { // notification revealer
      margin: 0 4px; // prevent unwanted overflow
      border: none;
      background-color: transparent;
      // show notification icons at the left of label
      background-image: -gtk-icontheme("dialog-error-symbolic");
      background-position: left center;
      background-size: 16px 16px;
      background-repeat: no-repeat;
      color: $error_color;
      font-weight: 700;
      font-size: 110%;

      &:dir(rtl) { background-position: right center; }
    }
  }

  #login_window {
  }

  #content_frame { padding-bottom: 14px; }

  #buttonbox_frame {
    padding-top: 8px; // reserve gap between infobar and buttonbox
  }
}


/************
 * Corebird *
 ************/

// use normal foreground colour
stack button.profile-button {
  &:checked { color: $fg_color; }
}

headerbar.titlebar box {
  button.toggle.account-button { // left-most account-button
    min-width: $icon_size;
    min-height: $icon_size;
    // it doesn't work
    padding: rem(6.7px) rem(10.7px) rem(6.7px);
    // revert to square button since we can't make perfect circle button
    border-radius: 2px;
    -gtk-outline-radius: 2px;

    // it doesn't work
    .avatar-round { border-color: transparent; }
  }

  button.image-button.toggle { // tweet button
    min-width: $icon_size;
    min-height: $icon_size;
    padding: rem(10.7px);
  }
}
/* ... */

